--- a/packages/locales/src/lang/cn/global.json
+++ b/packages/locales/src/lang/cn/global.json
@@ -2,7 +2,9 @@
     "auth.message.register_success": "注册成功。",
     "common.button.cancel": "取消",
     "common.button.confirm": "确认",
+    "common.button.download": "下载",
     "common.button.edit": "编辑",
+    "common.button.interrupt": "中止",
     "common.button.loading": "加载中",
     "common.button.next": "下一步",
     "common.button.previous": "上一步",
@@ -12,9 +14,14 @@
     "common.document.title": "Beaver IoT",
     "common.label.403_forbidden": "403 禁止",
     "common.label.404_not_found": "404 未找到页面",
+    "common.label.abnormal": "异常",
+    "common.label.action": "动作",
     "common.label.add": "添加",
+    "common.label.ai_model": "模型",
+    "common.label.all_tasks_completed": "全部执行完成",
     "common.label.back": "返回",
     "common.label.banned": "禁止",
+    "common.label.batch_add": "批量添加",
     "common.label.broker_address": "Broker地址",
     "common.label.broker_port": "Broker端口号",
     "common.label.bulk_deletion": "批量删除",
@@ -22,11 +29,20 @@
     "common.label.by_device": "基于设备",
     "common.label.choices": "待选择",
     "common.label.chosen": "已选",
+    "common.label.clear_filter_condition": "清除过滤条件",
     "common.label.click_to_try_fix": "点击尝试修复",
     "common.label.client_id": "客户端ID",
     "common.label.close": "关闭",
+    "common.label.color": "颜色",
+    "common.label.column_setting_fixed_left": "左（固定列）",
+    "common.label.column_setting_fixed_right": "右（固定列）",
+    "common.label.column_setting_non_fixed_column": "自适应列",
+    "common.label.columns_setting": "列设置",
+    "common.label.condition_any_equal": "任意其一",
     "common.label.confirm_password": "确认密码",
     "common.label.connect": "连接",
+    "common.label.connect_status": "连接状态",
+    "common.label.connected": "已连接",
     "common.label.content": "内容",
     "common.label.copy": "复制",
     "common.label.copy_error_info": "复制错误信息",
@@ -41,8 +57,11 @@
     "common.label.days": "{1} 天",
     "common.label.delete": "删除",
     "common.label.deletion": "删除",
+    "common.label.description": "描述",
     "common.label.detail": "详情",
     "common.label.device": "设备",
+    "common.label.download": "下载",
+    "common.label.download_template": "下载模板",
     "common.label.edit_title": "编辑{1}",
     "common.label.editor": "编辑器",
     "common.label.email": "电子邮件",
@@ -62,6 +81,8 @@
     "common.label.input": "输入",
     "common.label.integration": "集成",
     "common.label.invisible": "不可见",
+    "common.label.is_adding": "正在添加",
+    "common.label.item_selected": "已选中{1}项",
     "common.label.json": "JSON",
     "common.label.key": "键",
     "common.label.label": "标签",
@@ -80,11 +101,15 @@
     "common.label.no_device_entity": "无设备归属实体",
     "common.label.no_options": "无可用项",
     "common.label.no_permissions": "无权限",
+    "common.label.normal": "正常",
+    "common.label.not_connected": "未连接",
     "common.label.on": "开",
     "common.label.openapi": "OpenAPI",
     "common.label.operation": "操作",
     "common.label.output": "输出",
+    "common.label.page": "页面",
     "common.label.page_not_permission": "您没有访问权限，请联系管理员处理。",
+    "common.label.param_name": "参数名称",
     "common.label.password": "密码",
     "common.label.please_select": "请选择",
     "common.label.property": "属性",
@@ -96,10 +121,12 @@
     "common.label.remove": "移除",
     "common.label.rename": "重命名",
     "common.label.required": "必填",
+    "common.label.result": "结果",
     "common.label.run": "运行",
     "common.label.search": "搜索",
     "common.label.second": "{1} 秒",
     "common.label.seconds": "{1} 秒",
+    "common.label.select_all": "全选",
     "common.label.select_entity": "选择实体",
     "common.label.selected": "选中",
     "common.label.service": "服务",
@@ -113,20 +140,26 @@
     "common.label.system": "系统",
     "common.label.table_disabled_status": "禁用状态",
     "common.label.target": "目标",
+    "common.label.tasks_has_been_interrupted": "任务被终止",
     "common.label.test": "测试",
     "common.label.time": "时间",
     "common.label.tip": "提示",
     "common.label.title": "标题",
+    "common.label.total_count": "总数",
     "common.label.true": "True",
     "common.label.type": "类型",
     "common.label.unit": "单位",
     "common.label.update_time": "更新时间",
+    "common.label.upload": "上传",
+    "common.label.upload_file": "上传文件",
     "common.label.upload_image": "上传图片",
     "common.label.uploading": "上传中",
     "common.label.url": "URL",
     "common.label.username": "用户名",
     "common.label.value": "值",
     "common.label.version": "版本",
+    "common.label.view_all_tags": "点击查看所有标签",
+    "common.label.view_tags": "查看标签",
     "common.label.visible": "可见",
     "common.label.webhook": "Webhook",
     "common.label.week": "星期",
@@ -155,6 +188,7 @@
     "common.modal.desc_leave_current_page": "您所调整的内容不会保存，是否确认离开此页面？",
     "common.modal.title_leave_current_page": "离开当前页面",
     "common.placeholder.input": "请输入",
+    "common.placeholder.input_image_url": "请输入图片URL。",
     "common.placeholder.maximum": "最大值",
     "common.placeholder.minimum": "最小值",
     "common.placeholder.select": "请选择",
@@ -166,7 +200,9 @@
     "common.symbol.parentheses": "（{1}）",
     "common.time.afternoon": "下午",
     "common.time.morning": "上午",
+    "common.tip.maximum_number_reached": "已达到最大数量。",
     "common.unit.second": "秒",
+    "common.valid.input_letter_num_special_char": "仅大写、小写字母 、数字 和 {1}允许输入。",
     "valid.date.selected_time_greater_than_now_time": "不支持早于当前时间的时间。",
     "valid.date.start_time_greater_than_end_time": "开始时间不能晚于结束时间。",
     "valid.date.start_time_less_than_pre_end_time": "开始时间不能早于上次结束时间。",
@@ -232,15 +268,5 @@
     "valid.input.username": "用户名长度最小长度为5。",
     "valid.input.value": "输入值：仅{0}。",
     "valid.input.version": "版本号不符合规范。",
-    "valid.resp.at_least_one": "请至少选择一个{1}。",
-    "common.label.page": "页",
-    "common.label.total_count": "总数",
-    "common.label.columns_setting": "列设置",
-    "common.label.column_setting_fixed_left": "左（固定）",
-    "common.label.column_setting_fixed_right": "右（固定）",
-    "common.label.column_setting_non_fixed_column": "自适应列",
-    "common.label.item_selected": "{1} 项选中",
-    "common.label.condition_any_equal": "其中任一",
-    "common.label.view_tags": "查看标签",
-    "common.label.view_all_tags": "点击查看全部标签"
+    "valid.resp.at_least_one": "请至少选择一个{1}。"
 }
