--- a/packages/locales/src/lang/cn/user.json
+++ b/packages/locales/src/lang/cn/user.json
@@ -29,6 +29,9 @@
     "user.role.members_tab_title": "成员",
     "user.role.model_table_title": "功能模块",
     "user.role.page_table_title": "功能页面",
+    "user.role.permission_group_manage": "设备组管理",
+    "user.role.permission_manage": "管理",
+    "user.role.permission_view": "查看",
     "user.role.resource_dashboard_tab_title": "仪表盘权限",
     "user.role.resource_device_tab_title": "设备权限",
     "user.role.resource_integration_tab_title": "集成权限",
