--- a/packages/locales/src/lang/en/device.json
+++ b/packages/locales/src/lang/en/device.json
@@ -1,6 +1,12 @@
 {
     "device.detail.basic_info": "Basic Information",
     "device.detail.entity_data": "Entity Data",
+    "device.label.add_device_group": "Create a Device Group",
+    "device.label.all_devices": "All Devices",
+    "device.label.batch_add_device": "Bulk Add Devices",
+    "device.label.change_device_group": "Change Device Group",
+    "device.label.device_group": "Device Group",
+    "device.label.edit_device_group": "Edit Device Group",
     "device.label.param_device_id": "Device ID",
     "device.label.param_device_name": "Device Name",
     "device.label.param_entity_id": "Entity ID",
@@ -8,19 +14,13 @@
     "device.label.param_external_id": "External Device ID",
     "device.label.param_founder": "Founder",
     "device.label.param_source": "Source",
+    "device.label.ungrouped_devices": "Ungrouped Devices",
     "device.message.delete_tip": "Are you sure to delete?",
-    "device.label.device_group": "设备组",
-    "device.label.add_device_group": "新建设备组",
-    "device.label.all_devices": "所有设备",
-    "device.label.ungrouped_devices": "未分组",
-    "device.label.edit_device_group": "编辑设备组",
-    "device.tip.delete_device_group": "删除设备分组会将该分组下的所有设备的归属组置空。确认要删除设备分组: {1}吗？",
-    "device.label.change_device_group": "Change Group",
-    "device.label.batch_add_device": "Batch Add Device",
-    "device.tip.device_add_successful": "{1} 台设备添加成功",
-    "device.tip.device_add_failed": "{1} 台设备添加失败，请下载文件查看详情",
-    "device.tip.move_device_to_group": "已选 {1} 个设备，请选择要放置的分组",
-    "device.tip.move_device_to_ungrouped": "已选 {1} 个设备，标记为未分组后，这 {1} 个设备的原分组信息将会被清空",
-    "device.title.move_device_to_group": "移动到分组",
-    "device.title.mark_device_to_ungrouped": "标记为未分组"
+    "device.tip.delete_device_group": "Once deleted, the devices will no longer belong to any device group. Are you sure you want to delete the device group: {1}?",
+    "device.tip.device_add_failed": "{1} Device(s) failed to be added. Please download the file for details.",
+    "device.tip.device_add_successful": "{1} Device(s) added successfully.",
+    "device.tip.move_device_to_group": "You have selected {1} device(s). Please choose a group to place them in.",
+    "device.tip.move_device_to_ungrouped": "{1} device(s) selected. If marked as ungrouped, the original group information of these {1} device(s) will be cleared.",
+    "device.title.mark_device_to_ungrouped": "Marked as Ungrouped",
+    "device.title.move_device_to_group": "Move to the Group"
 }
