--- a/packages/locales/src/lang/en/entity.json
+++ b/packages/locales/src/lang/en/entity.json
@@ -6,11 +6,13 @@
     "entity.label.create_property": "Create Property",
     "entity.label.create_service": "Create Service",
     "entity.label.custom_entity": "Custom Entity",
+    "entity.label.device_group": "Device Group",
     "entity.label.entity_items": "Items",
     "entity.label.entity_maximum_length": "Maximum Length",
     "entity.label.entity_maximum_value": "Maximum Value",
     "entity.label.entity_minimum_length": "Minimum Length",
     "entity.label.entity_minimum_value": "Minimum Value",
+    "entity.label.entity_tags": "Entity Tags",
     "entity.label.entity_type_of_access": "Type of Access",
     "entity.label.entity_type_of_access_read_and_write": "RW",
     "entity.label.entity_type_of_access_readonly": "R",
@@ -21,13 +23,11 @@
     "entity.label.entity_type_of_long": "LONG",
     "entity.label.entity_type_of_string": "STRING",
     "entity.label.enumeration_items": "Enumeration Items",
+    "entity.label.filter": "Filters",
     "entity.label.historical_data": "Historical Data",
+    "entity.label.latest_value": "Latest Value",
+    "entity.label.parent_entity": "Parent Entity",
     "entity.label.set_enumeration_items": "Set Enumeration Items",
     "entity.label.set_value": "Set Value",
-    "entity.label.value_source": "Value Source",
-    "entity.label.device_group": "Device Group",
-    "entity.label.entity_tags": "Entity Tags",
-    "entity.label.latest_value": "Latest Value",
-    "entity.label.filter": "Filters",
-    "entity.label.parent_entity": "Parent Entity"
+    "entity.label.value_source": "Value Source"
 }
