--- a/packages/locales/src/lang/en/error.json
+++ b/packages/locales/src/lang/en/error.json
@@ -1,86 +1,74 @@
 {
     "error.http.account_session_logout": "Your account has been signed out.",
     "error.http.authentication_failed": "The account does not exist or the password is incorrect, please re-enter.",
+    "error.http.codec_resource_format_error": "The codec resource format is invalid.",
+    "error.http.codec_resource_request_error": "Device codec repository request error.",
     "error.http.dashboard_name_exist": "Dashboard name already exists",
     "error.http.data_no_found": "Data not found",
+    "error.http.device_bind_error": "Device binding error",
+    "error.http.device_entity_value_validate_error": "Device entity value validation error",
+    "error.http.device_group_name_exists": "The device group name already exists.",
+    "error.http.device_group_not_found": "No device group found",
+    "error.http.device_group_number_limitation": "The number of device groups has reached the maximum limit.",
+    "error.http.device_id_not_found": "The key “device_id” was not found.",
+    "error.http.device_list_sheet_device_over_limitation": "The batch add limit has been reached. Allowed quantity per batch: {limitation}.",
+    "error.http.device_list_sheet_no_device": "At least one device is required for batch upload.",
+    "error.http.device_list_sheet_parsing_error": "Batch upload device file parsing error.",
+    "error.http.device_list_sheet_parsing_value_error": "The value of entity {entity_name} is not of type \"{expected_type}\" and cannot be converted.",
+    "error.http.device_list_sheet_structure_error": "File error. Please check the file format (required: .xlsx) and ensure the content matches the template.",
+    "error.http.device_template_validate_error": "Device template validation error",
+    "error.http.duplicated_device_eui": "Device with the same EUI already exists.",
+    "error.http.duplicated_gateway_eui": "Gateway with the same EUI already exists.",
+    "error.http.entity_attribute_min_invalid": "The minimum value for entity attributes must be a number.",
+    "error.http.entity_tag_name_already_exists": "The tag name already exists.",
+    "error.http.entity_tag_not_found": "The tag does not exist.",
+    "error.http.entity_value_greater_than_max": "The value of {entity_name} must not exceed {max}.",
+    "error.http.entity_value_invalid_enum": "{entity_name} can only use items from “{enum}” as values.",
+    "error.http.entity_value_length_invalid_enum": "The length of the value of {entity_name} should be within the range: {length_range}.",
+    "error.http.entity_value_length_longer_than_max_length": "The length of the value of {entity_name} must not exceed {max_length}.",
+    "error.http.entity_value_length_out_of_range": "The length of the value of {entity_name} should be between {min_length} and {max_length}.",
+    "error.http.entity_value_length_shorter_than_min_length": "The length of the value of {entity_name} must not be less than {min_length}.",
+    "error.http.entity_value_less_than_min": "The value of {entity_name} must not be less than {min}.",
+    "error.http.entity_value_not_match_format": "The value of {entity_name} does not comply with the formatting rules: {fomat}.",
+    "error.http.entity_value_not_match_type": "The type of {entity_name} is invalid. Valid types: {required_type}.",
+    "error.http.entity_value_null": "The value of entity {entity_name} is empty.",
+    "error.http.entity_value_out_of_range": "The value of {entity_name} should be between {min} and {max}.",
+    "error.http.entity_value_validation_error": "The value of {enetity_name} failed validation.",
     "error.http.forbidden_permission": "No access rights, and access is prohibited.",
+    "error.http.gateway_no_application": "No applications have been created in the gateway.",
+    "error.http.gateway_no_device_profile": "No device profiles have been added to the gateway.",
+    "error.http.gateway_request_timeout": "Gateway request timed out.",
+    "error.http.gateway_respond_error": "The gateway returned an error message.",
+    "error.http.json_validate_error": "JSON validation error.",
     "error.http.method_not_allowed": "Disallowed Http Methods",
+    "error.http.msc_another_task_running": "There is a task in progress.",
+    "error.http.msc_api_error": "The API of Milesight Development Platform integration returned an error message: {msg}.",
+    "error.http.msc_connection_not_ready": "The connection integrated into the Milesight Development platform is unavailable.",
     "error.http.name_repeated": "Repetition of names",
     "error.http.network_timeout": "Network connection timeout.",
+    "error.http.no_valid_profile_for_device": "The gateway does not provide the profile required by the device.",
+    "error.http.number_of_entity_tags_exceeded": "The number of tags created exceeds the limit.",
+    "error.http.number_of_tags_per_entity_exceeded": "The maximum number of tags that can be added to a single entity has been reached.",
     "error.http.page_not_found": "Sorry, the page you visited does not exist.",
     "error.http.parameter_syntax_error": "Parameter syntax error",
     "error.http.parameter_validation_failed": "Parameter validation failed",
     "error.http.request_too_frequently": "Request too frequently",
     "error.http.role_does_not_exit": "Role does not exist",
     "error.http.role_still_has_user": "Please remove the user under the role first, and then delete the role.",
+    "error.http.server_data_not_found": "Model not found.",
     "error.http.server_error": "Request error, please check and try again.",
+    "error.http.server_internal_server_error": "Internal server error",
+    "error.http.server_invalid_input_data": "Input parameter error.",
+    "error.http.server_model_worker_busy": "Model processing capacity is capped.",
+    "error.http.server_not_reachable": "Service unavailable",
+    "error.http.server_other_error": "Other server error",
+    "error.http.server_rate_limit_exceeded": "The service interface request has reached its limit.",
+    "error.http.server_token_access_denied": "The token were rejected.",
+    "error.http.server_token_invalid": "The token is invalid and the service refuses to connect.",
+    "error.http.template_name_exists": "The device template name already exists.",
     "error.http.token_invalid": "The token is invalid, please try again.",
     "error.http.token_not_found": "Your account hasn't been signed in.",
+    "error.http.topic_exists": "Topic already exists.",
     "error.http.user_has_no_permission": "Current user has no privileges",
-    "error.http.user_register_email_exist": "This User Register Email Already Exists.",
-    "error.http.gateway_request_timeout": "网关请求超时",
-    "error.http.gateway_respond_error": "网关返回了错误消息",
-    "error.http.codec_resource_request_error": "设备编解码器codec仓库请求错误",
-    "error.http.codec_resource_format_error": "codec资源的格式不合法",
-    "error.http.duplicated_gateway_eui": "重复添加相同eui的网关",
-    "error.http.duplicated_device_eui": "重复添加相同eui的设备",
-    "error.http.gateway_no_application": "网关未添加任何application",
-    "error.http.gateway_no_device_profile": "网关未添加任何设备profile",
-    "error.http.no_valid_profile_for_device": "网关未提供设备需要的profile",
-    "error.http.device_group_not_found": "未找到设备组",
-    "error.http.device_group_name_exists": "设备组名称已存在",
-    "error.http.device_group_number_limitation": "设备组数量达到最大上限",
-    "error.http.device_list_sheet_structure_error": "批量上传设备列表格式错误",
-    "error.http.device_list_sheet_device_over_limitation": "一次批量上传设备的数量达到最大上限",
-    "error.http.device_list_sheet_no_device": "批量上传至少需要一个设备",
-    "error.http.device_list_sheet_parsing_error": "批量上传设备列表解析错误",
-    "error.http.entity_attribute_min_invalid": "实体属性最小值必须为数字",
-    "error.http.entity_attribute_max_invalid": "实体属性最大值必须为数字",
-    "error.http.entity_attribute_min_greater_than_max": "实体属性最小值大于最大值",
-    "error.http.entity_attribute_min_length_invalid": "实体属性最小长度必须为正整数",
-    "error.http.entity_attribute_max_length_invalid": "实体属性最大长度必须为正整数",
-    "error.http.entity_attribute_min_length_greater_than_max_length": "实体属性最小长度大于最大长度",
-    "error.http.entity_attribute_length_range_invalid": "实体属性长度枚举必须每个长度都是正整数",
-    "error.http.entity_attribute_fraction_digits_invalid": "实体属性小数位数必须为正整数",
-    "error.http.entity_attribute_default_value_invalid": "实体属性默认值与值类型不匹配",
-    "error.http.entity_attribute_optional_invalid": "实体属性可选标志必须是布尔型",
-    "error.http.entity_attribute_enum_invalid": "实体属性枚举必须为键值对类型",
-    "error.http.entity_validation_error": "实体校验错误",
-    "error.http.entity_attribute_key_invalid": "实体属性的Key不在允许的范围内",
-    "error.http.entity_attribute_enum_over_size": "实体属性枚举的大小超过限制",
-    "error.http.entity_attribute_enum_key_or_value_length_greater_than_max_length": "实体属性枚举的Key或值长度超过限制",
-    "error.http.entity_attribute_is_enum_invalid": "实体属性是否枚举属性必须为布尔型",
-    "error.http.entity_attribute_unit_too_long": "实体属性单位太长",
-    "error.http.entity_value_null": "实体值为空",
-    "error.http.entity_value_not_match_type": "实体值与类型不匹配",
-    "error.http.entity_value_less_than_min": "实体值小于允许的最小值",
-    "error.http.entity_value_greater_than_max": "实体值大于允许的最大值",
-    "error.http.entity_value_out_of_range": "实体值不在允许的范围内",
-    "error.http.entity_value_length_shorter_than_min_length": "实体值长度小于允许的最小值",
-    "error.http.entity_value_length_longer_than_max_length": "实体值长度大于允许的最大值",
-    "error.http.entity_value_length_out_of_range": "实体值长度不在允许的范围内",
-    "error.http.entity_value_length_invalid_enum": "实体值长度不在允许的长度选项内",
-    "error.http.entity_value_not_match_format": "实体值与格式化规则不匹配",
-    "error.http.entity_value_invalid_enum": "实体值不在允许的枚举选项内",
-    "error.http.entity_value_validation_error": "实体值校验失败",
-    "error.http.template_name_exists": "设备模板名称已存在",
-    "error.http.topic_exists": "Topic已存在",
-    "error.http.server_not_reachable": "服务不可用",
-    "error.http.server_token_invalid": "服务Token非法",
-    "error.http.server_token_access_denied": "服务Token被拒绝",
-    "error.http.server_data_not_found": "服务找不到模型",
-    "error.http.server_invalid_input_data": "服务输入参数非法",
-    "error.http.server_rate_limit_exceeded": "服务接口限流",
-    "error.http.server_internal_server_error": "服务内部错误",
-    "error.http.server_model_worker_busy": "服务模型处理能力达到上限",
-    "error.http.server_other_error": "服务其他错误",
-    "error.http.device_bind_error": "设备绑定错误",
-    "error.http.msc_api_error": "MSC API 返回了错误码 {msg}",
-    "error.http.msc_another_task_running": "另一个任务已经在运行",
-    "error.http.msc_connection_not_ready": "和MSC平台的连接尚未建立",
-    "error.http.entity_tag_not_found": "标签不存在",
-    "error.http.number_of_entity_tags_exceeded": "创建的标签数量超过上限",
-    "error.http.number_of_tags_per_entity_exceeded": "实体添加的标签数量超过上限",
-    "error.http.entity_tag_name_already_exists": "标签名称已存在",
-    "error.http.device_list_sheet_parsing_value_error": "批量上传设备列表值转换错误"
+    "error.http.user_register_email_exist": "This User Register Email Already Exists."
 }
