--- a/packages/locales/src/lang/en/global.json
+++ b/packages/locales/src/lang/en/global.json
@@ -2,7 +2,9 @@
     "auth.message.register_success": "Register successfully.",
     "common.button.cancel": "Cancel",
     "common.button.confirm": "Confirm",
+    "common.button.download": "Download",
     "common.button.edit": "Edit",
+    "common.button.interrupt": "Stop",
     "common.button.loading": "Loading",
     "common.button.next": "Next",
     "common.button.previous": "Previous",
@@ -12,9 +14,14 @@
     "common.document.title": "Beaver IoT",
     "common.label.403_forbidden": "403 Forbidden",
     "common.label.404_not_found": "404 Not Found",
+    "common.label.abnormal": "Abnormal",
+    "common.label.action": "Action",
     "common.label.add": "Add",
+    "common.label.ai_model": "Model",
+    "common.label.all_tasks_completed": "All Tasks Completed",
     "common.label.back": "Back",
     "common.label.banned": "Banned",
+    "common.label.batch_add": "Batch Add",
     "common.label.broker_address": "Broker Address",
     "common.label.broker_port": "Broker Port",
     "common.label.bulk_deletion": "Bulk Deletion",
@@ -22,11 +29,20 @@
     "common.label.by_device": "By Device",
     "common.label.choices": "To Be Selected",
     "common.label.chosen": "Selected",
+    "common.label.clear_filter_condition": "Clear Filter Conditions",
     "common.label.click_to_try_fix": "Click to try to fix",
     "common.label.client_id": "Client ID",
     "common.label.close": "Close",
+    "common.label.color": "Color",
+    "common.label.column_setting_fixed_left": "Left (Fixed)",
+    "common.label.column_setting_fixed_right": "Right (Fixed)",
+    "common.label.column_setting_non_fixed_column": "Adaptive Columns",
+    "common.label.columns_setting": "Column Settings",
+    "common.label.condition_any_equal": "is any of",
     "common.label.confirm_password": "Confirm Password",
     "common.label.connect": "Connect",
+    "common.label.connect_status": "Connection Status",
+    "common.label.connected": "Connected",
     "common.label.content": "Content",
     "common.label.copy": "Copy",
     "common.label.copy_error_info": "Copying Error Messages",
@@ -41,8 +57,11 @@
     "common.label.days": "{1} Days",
     "common.label.delete": "Delete",
     "common.label.deletion": "Deletion",
+    "common.label.description": "Description",
     "common.label.detail": "Detail",
     "common.label.device": "Device",
+    "common.label.download": "Download",
+    "common.label.download_template": "Download Template",
     "common.label.edit_title": "Edit {1}",
     "common.label.editor": "Editor",
     "common.label.email": "Email",
@@ -62,6 +81,8 @@
     "common.label.input": "Input",
     "common.label.integration": "Integration",
     "common.label.invisible": "Invisible",
+    "common.label.is_adding": "Adding",
+    "common.label.item_selected": "{1} item(s) selected",
     "common.label.json": "JSON",
     "common.label.key": "Key",
     "common.label.label": "Label",
@@ -80,11 +101,15 @@
     "common.label.no_device_entity": "Entities with No Device",
     "common.label.no_options": "No available items",
     "common.label.no_permissions": "No Permissions",
+    "common.label.normal": "Normal",
+    "common.label.not_connected": "Not Connected",
     "common.label.on": "ON",
     "common.label.openapi": "OpenAPI",
     "common.label.operation": "Operation",
     "common.label.output": "Output",
+    "common.label.page": "page",
     "common.label.page_not_permission": "Access denied. Please reach out to the administrator.",
+    "common.label.param_name": "Param Name",
     "common.label.password": "Password",
     "common.label.please_select": "Please select",
     "common.label.property": "Property",
@@ -96,10 +121,12 @@
     "common.label.remove": "Remove",
     "common.label.rename": "Rename",
     "common.label.required": "Required",
+    "common.label.result": "Result",
     "common.label.run": "Run",
     "common.label.search": "Search",
     "common.label.second": "{1} Second",
     "common.label.seconds": "{1} Seconds",
+    "common.label.select_all": "Select All",
     "common.label.select_entity": "Select Entity",
     "common.label.selected": "Selected",
     "common.label.service": "Service",
@@ -113,20 +140,26 @@
     "common.label.system": "System",
     "common.label.table_disabled_status": "Disabled status",
     "common.label.target": "Target",
+    "common.label.tasks_has_been_interrupted": "Task stopped",
     "common.label.test": "Test",
     "common.label.time": "Time",
     "common.label.tip": "Tip",
     "common.label.title": "Title",
+    "common.label.total_count": "Total",
     "common.label.true": "True",
     "common.label.type": "Type",
     "common.label.unit": "Unit",
     "common.label.update_time": "Update Time",
+    "common.label.upload": "Upload",
+    "common.label.upload_file": "Upload File",
     "common.label.upload_image": "Upload Image",
     "common.label.uploading": "Uploading",
     "common.label.url": "URL",
     "common.label.username": "Username",
     "common.label.value": "Value",
     "common.label.version": "Version",
+    "common.label.view_all_tags": "Click To View All Tags",
+    "common.label.view_tags": "View Tags",
     "common.label.visible": "Visible",
     "common.label.webhook": "Webhook",
     "common.label.week": "Week",
@@ -155,6 +188,7 @@
     "common.modal.desc_leave_current_page": "Changes you made may not be saved. Are you sure you want to leave this page?",
     "common.modal.title_leave_current_page": "Leave the current page",
     "common.placeholder.input": "Please enter",
+    "common.placeholder.input_image_url": "Please enter image URL.",
     "common.placeholder.maximum": "Maximum",
     "common.placeholder.minimum": "Minimum",
     "common.placeholder.select": "Please Select",
@@ -166,7 +200,9 @@
     "common.symbol.parentheses": "({1})",
     "common.time.afternoon": "p.m.",
     "common.time.morning": "a.m.",
+    "common.tip.maximum_number_reached": "The maximum number has been reached.",
     "common.unit.second": "s",
+    "common.valid.input_letter_num_special_char": "Only uppercase letters, lowercase letters, numbers, and {1} are allowed.",
     "valid.date.selected_time_greater_than_now_time": "The time earlier than current time is not supported.",
     "valid.date.start_time_greater_than_end_time": "The start time cannot be later than end time.",
     "valid.date.start_time_less_than_pre_end_time": "The start time cannot be earlier than the last end time.",
@@ -232,31 +268,5 @@
     "valid.input.username": "Minimum username length is 5.",
     "valid.input.value": "Input value: {0} only.",
     "valid.input.version": "The version number does not comply with the specification.",
-    "valid.resp.at_least_one": "Please select at least one {1}.",
-    "common.label.description": "Description",
-    "common.label.color": "Color",
-    "common.label.expand": "Expand",
-    "common.label.collapse": "Collapse",
-    "common.label.batch_add": "Batch Add",
-    "common.label.download_template": "Download Template",
-    "common.label.upload_file": "Upload File",
-    "common.tip.maximum_number_reached": "已达到最大数量",
-    "common.button.interrupt": "终止",
-    "common.label.is_adding": "正在添加",
-    "common.label.all_tasks_completed": "全部执行完成",
-    "common.label.tasks_has_been_interrupted": "任务被终止",
-    "common.button.download": "下载",
-    "common.label.action": "Action",
-    "common.label.select_all": "全选",
-    "common.label.page": "page",
-    "common.label.total_count": "Total",
-    "common.label.columns_setting": "Column Settings",
-    "common.label.column_setting_fixed_left": "Left (Fixed)",
-    "common.label.column_setting_fixed_right": "Right (Fixed)",
-    "common.label.column_setting_non_fixed_column": "Adaptive Columns",
-    "common.label.item_selected": "{1} Item Selected",
-    "common.label.condition_any_equal": "Any Equal",
-    "common.label.view_tags": "View Tags",
-    "common.label.view_all_tags": "Click To View All Tags",
-    "common.label.clear_filter_condition": "Clear Search Criteria"
+    "valid.resp.at_least_one": "Please select at least one {1}."
 }
