--- a/packages/locales/src/lang/en/workflow.json
+++ b/packages/locales/src/lang/en/workflow.json
@@ -23,6 +23,7 @@
     "workflow.editor.form_param_timer_type_cycle": "Cycle Execution",
     "workflow.editor.form_param_timer_type_interval": "Interval Execution",
     "workflow.editor.form_param_timer_type_once": "Single Execution",
+    "workflow.editor.helper_text_set_content_type_in_header": "Please set Content-Type in the Header",
     "workflow.editor.input_placeholder_remark": "Add descriptions...",
     "workflow.editor.log_panel_title_test_run": "Test Run",
     "workflow.editor.log_panel_title_verification_result": "Verification Result",
@@ -139,21 +140,20 @@
     "workflow.valid.invalid_email": "The {1} field value is not a valid email.",
     "workflow.valid.invalid_node_id": "The {1} node ID is invalid.",
     "workflow.valid.invalid_node_type": "The {1} node type is invalid.",
+    "workflow.valid.invalid_reference_param": "The reference param of {1} field is invalid.",
     "workflow.valid.invalid_timer_interval": "The timer interval must be less than {1}.",
     "workflow.valid.invalid_url": "The {1} field value is not a valid URL.",
     "workflow.valid.invalid_url_path": "The {1} field must start with /, supporting alphanumeric and {2} formats.",
     "workflow.valid.max_length": "The {1} field length of the value you entered cannot exceed {2} digits.",
-    "workflow.valid.min_length": "The {1} field length of the input value should be at least {2} digits.",
+    "workflow.valid.max_value": "The value assigned to entity {1} shall be less than or equal to {2}.",
+    "workflow.valid.min_length": "The length of the value assigned to entity {1} cannot be less than {2} bits.",
+    "workflow.valid.min_value": "The value assigned to entity {1} shall be greater than or equal to {2}.",
     "workflow.valid.node_id_duplicated": "{1} and {2} node IDs are duplicated.",
     "workflow.valid.node_parameters_required": "The {1} node parameters is required.",
     "workflow.valid.output_node_limit_count_tip": "Only one output node is allowed in a workflow.",
     "workflow.valid.output_node_limit_has_trigger_tip": "When a workflow contains output nodes, the start node must be a trigger node.",
     "workflow.valid.parameter_required": "The {1} node parameter is required.",
     "workflow.valid.range_length": "The length of the {1} field value should be greater than or equal to {2} and less than or equal to {3}.",
-    "workflow.valid.required": "The {1} field is required.",
-    "workflow.valid.invalid_reference_param": "The reference param of {1} field is invalid.",
-    "workflow.editor.helper_text_set_content_type_in_header": "Please set Content-Type in the Header",
-    "workflow.valid.range_num": "The value of the {1} field of the input value should be greater than or equal to {2} and less than or equal to {3}.",
-    "workflow.valid.max_value": "The {1} field value size of the input value should be less than or equal to {2}.",
-    "workflow.valid.min_value": "The {1} field value size of the input value should be greater than or equal to {2}."
+    "workflow.valid.range_num": "The value assigned to entity {1} shall be greater than or equal to {2} and less than or equal to {3}.",
+    "workflow.valid.required": "The {1} field is required."
 }
