--- a/packages/locales/src/lang/cn/error.json
+++ b/packages/locales/src/lang/cn/error.json
@@ -1,21 +1,74 @@
 {
     "error.http.account_session_logout": "您的账户已退出登录。",
     "error.http.authentication_failed": "账户不存在或密码错误，请重新输入。",
+    "error.http.codec_resource_format_error": "codec资源的格式不合法。",
+    "error.http.codec_resource_request_error": "设备编解码器codec仓库请求错误。",
     "error.http.dashboard_name_exist": "仪表板名称已存在",
     "error.http.data_no_found": "数据未找到",
+    "error.http.device_bind_error": "设备绑定错误",
+    "error.http.device_entity_value_validate_error": "设备实体校验错误。",
+    "error.http.device_group_name_exists": "设备组名称已存在",
+    "error.http.device_group_not_found": "未找到设备分组",
+    "error.http.device_group_number_limitation": "设备组数量达到最大上限",
+    "error.http.device_id_not_found": "未找到键“device_id\"。",
+    "error.http.device_list_sheet_device_over_limitation": "单次批量添加数量达到上限，允许数量：{limitation}。",
+    "error.http.device_list_sheet_no_device": "批量上传至少需要一个设备。",
+    "error.http.device_list_sheet_parsing_error": "批量上传设备文件解析错误。",
+    "error.http.device_list_sheet_parsing_value_error": "实体{entity_name}的值，类型不为：{expected_type}，无法进行转换。",
+    "error.http.device_list_sheet_structure_error": "文件错误，请检查文件格式（要求：.xlsx)或内容是否与模板一致。",
+    "error.http.device_template_validate_error": "设备模板校验出错。",
+    "error.http.duplicated_device_eui": "已存在相同的EUI的设备。",
+    "error.http.duplicated_gateway_eui": "已存在相同EUI的网关。",
+    "error.http.entity_attribute_min_invalid": "实体属性最小值必须为数字。",
+    "error.http.entity_tag_name_already_exists": "标签名称已存在。",
+    "error.http.entity_tag_not_found": "标签不存在。",
+    "error.http.entity_value_greater_than_max": "{entity_name}的值不允许大于{max}。",
+    "error.http.entity_value_invalid_enum": "{entity_name}只能使用“{enum}”中的项作为值。",
+    "error.http.entity_value_length_invalid_enum": "{entity_name}值的长度，应在范围：{length_range}内。",
+    "error.http.entity_value_length_longer_than_max_length": "{entity_name}值的长度，不允许大于{max_length}。",
+    "error.http.entity_value_length_out_of_range": "{enetity_name}值的长度，应在{min_length}到{max_length}之间。",
+    "error.http.entity_value_length_shorter_than_min_length": "{entity_name}值的长度，不允许小于{min_length}。",
+    "error.http.entity_value_less_than_min": "{entity_name}的值不允许小于{min}。",
+    "error.http.entity_value_not_match_format": "{entity_name}的值，不符合格式化规则：{fomat}。",
+    "error.http.entity_value_not_match_type": "{entity_name}类型不合法，合法类型:{required_type}。",
+    "error.http.entity_value_null": "实体{entity_name}的值为空。",
+    "error.http.entity_value_out_of_range": "{entity_name}的值，应在{min}到{max}之间。",
+    "error.http.entity_value_validation_error": "{enetity_name}的值校验失败。",
     "error.http.forbidden_permission": "没有访问权限，访问被禁止。",
+    "error.http.gateway_no_application": "网关中未创建任何application。",
+    "error.http.gateway_no_device_profile": "网关未添加任何设备profile。",
+    "error.http.gateway_request_timeout": "网关请求超时。",
+    "error.http.gateway_respond_error": "网关返回了错误信息。",
+    "error.http.json_validate_error": "JSON 检验错误。",
     "error.http.method_not_allowed": "不允许的HTTP方法",
+    "error.http.msc_another_task_running": "存在一个执行中的任务。",
+    "error.http.msc_api_error": "Milesight Development Platform集成的API返回了错误信息：{msg}。",
+    "error.http.msc_connection_not_ready": "Milesight Development平台集成的连接不可用。",
     "error.http.name_repeated": "名称重复",
     "error.http.network_timeout": "网络连接超时。",
+    "error.http.no_valid_profile_for_device": "网关未提供设备需要的profile。",
+    "error.http.number_of_entity_tags_exceeded": "创建的标签数量超过上限。",
+    "error.http.number_of_tags_per_entity_exceeded": "单个实体可添加的标签数量已达上限。",
     "error.http.page_not_found": "抱歉，您访问的页面不存在。",
     "error.http.parameter_syntax_error": "参数语法错误",
     "error.http.parameter_validation_failed": "参数验证失败",
     "error.http.request_too_frequently": "请求过于频繁",
     "error.http.role_does_not_exit": "角色不存在",
     "error.http.role_still_has_user": "请先删除角色下的用户，再删除角色。",
+    "error.http.server_data_not_found": "模型不存在。",
     "error.http.server_error": "请求错误，请检查并重试。",
+    "error.http.server_internal_server_error": "内部服务错误",
+    "error.http.server_invalid_input_data": "输入参数错误。",
+    "error.http.server_model_worker_busy": "模型处理能力达到上限。",
+    "error.http.server_not_reachable": "服务不可用。",
+    "error.http.server_other_error": "外部服务错误",
+    "error.http.server_rate_limit_exceeded": "服务接口请求达到上限。",
+    "error.http.server_token_access_denied": "鉴权被拒绝。",
+    "error.http.server_token_invalid": "鉴权无效，服务拒绝连接。",
+    "error.http.template_name_exists": "设备模板名称已存在。",
     "error.http.token_invalid": "令牌无效，请重试。",
     "error.http.token_not_found": "您的账户尚未登录。",
+    "error.http.topic_exists": "主题已存在。",
     "error.http.user_has_no_permission": "当前用户无权限",
     "error.http.user_register_email_exist": "用户注册邮箱已存在。"
 }
