--- a/packages/locales/src/lang/cn/workflow.json
+++ b/packages/locales/src/lang/cn/workflow.json
@@ -23,6 +23,7 @@
     "workflow.editor.form_param_timer_type_cycle": "周期执行",
     "workflow.editor.form_param_timer_type_interval": "间隔执行",
     "workflow.editor.form_param_timer_type_once": "单次执行",
+    "workflow.editor.helper_text_set_content_type_in_header": "请在请求头中设置Content-Type",
     "workflow.editor.input_placeholder_remark": "添加描述...",
     "workflow.editor.log_panel_title_test_run": "运行测试",
     "workflow.editor.log_panel_title_verification_result": "验证结果",
@@ -139,21 +140,20 @@
     "workflow.valid.invalid_email": "{1} 字段值不是有效的电子邮件。",
     "workflow.valid.invalid_node_id": "{1} 节点 ID 无效。",
     "workflow.valid.invalid_node_type": "{1} 节点类型无效。",
+    "workflow.valid.invalid_reference_param": "{1}处引用的参数无效。",
     "workflow.valid.invalid_timer_interval": "时间间隔必须小于 {1}。",
     "workflow.valid.invalid_url": "{1} 字段值不是有效的 URL。",
     "workflow.valid.invalid_url_path": "{1}字段必须由/开头 ，支持字母数字和 {2} 格式。",
     "workflow.valid.max_length": "输入值的 {1} 字段长度不能超过 {2} 位数。",
-    "workflow.valid.min_length": "输入值的 {1} 字段长度应不能少于 {2} 位数。",
+    "workflow.valid.max_value": "被赋予实体{1} 的值应小于或等于 {2}。",
+    "workflow.valid.min_length": "被赋予实体{1}的值的长度不能小于{2}位数。",
+    "workflow.valid.min_value": "被赋予实体{1} 的值应大于或等于 {2}。",
     "workflow.valid.node_id_duplicated": "{1} 和 {2} 节点 ID 重复。",
     "workflow.valid.node_parameters_required": "需要 {1} 节点参数。",
     "workflow.valid.output_node_limit_count_tip": "一个工作流中仅允许存在一个输出节点。",
     "workflow.valid.output_node_limit_has_trigger_tip": "当工作流中存在输出节点时，起始节点必须为触发器节点。",
     "workflow.valid.parameter_required": "{1} 节点参数为必填项。",
     "workflow.valid.range_length": "{1} 字段值的长度应大于或等于 {2}，小于或等于 {3}。",
-    "workflow.valid.required": "{1}字段为必填字段。",
-    "workflow.valid.invalid_reference_param": "{1}字段所引用的参数无效。",
-    "workflow.editor.helper_text_set_content_type_in_header": "请在 Header 中设置 Content-Type",
-    "workflow.valid.range_num": "输入值的 {1} 字段值的大小应大于或等于 {2}，小于或等于 {3}。",
-    "workflow.valid.max_value": "输入值的 {1} 字段值大小应小于或等于 {2}。",
-    "workflow.valid.min_value": "输入值的 {1} 字段值大小应大于或等于 {2}。"
+    "workflow.valid.range_num": "被赋予实体{1}的值应大于或等于{2}，小于或等于{3}。",
+    "workflow.valid.required": "{1}字段为必填字段。"
 }
