--- a/packages/locales/src/lang/en/tag.json
+++ b/packages/locales/src/lang/en/tag.json
@@ -1,19 +1,19 @@
 {
-    "tag.title.tag_management": "Tag Management",
-    "tag.title.tag_name": "Tag Name",
-    "tag.title.tagged_entities": "Tag Entities",
+    "tag.label.append_tag": "Add Selected Tags",
+    "tag.label.overwrite_tag": "Cover Selected Tags",
+    "tag.label.remove_tag": "Remove Selected Tags",
+    "tag.label.replace_tag": "Replace Selected Tags",
+    "tag.label.tags": "Tags",
+    "tag.tip.bulk_delete_tag": "Once deleted, these {1} tags will be removed from all associated entities. Are you sure you want to delete these {1} tags?",
+    "tag.tip.not_any_tags": "No tags",
+    "tag.tip.selected_entities_contain_follow_tags": "Selected {1} entities with the following tags:",
+    "tag.tip.single_delete_tag": "Once deleted, this tag will be removed from all associated items and no longer displayed. Are you sure you want to delete the tag: {1}?",
     "tag.title.add_tag": "Add Tag",
     "tag.title.edit_tag": "Edit Tag",
-    "tag.tip.single_delete_tag": "删除后所有使用了该标签的实体，都将不再展示该标签。确认删除标签: {1} 吗？",
-    "tag.tip.bulk_delete_tag": "删除后所有使用了这些标签的实体，都将不再展示该标签。确认删除这 {1} 个标签吗？",
-    "tag.label.tags": "Tags",
-    "tag.tip.not_any_tags": "没有标签",
-    "tag.tip.selected_entities_contain_follow_tags": "{1} entities have been selected, they contain the following tags: ",
     "tag.title.manage_tags": "Manage Tags",
-    "tag.label.append_tag": "追加所选标签",
-    "tag.label.overwrite_tag": "覆盖所选标签",
-    "tag.label.remove_tag": "移除所选标签",
-    "tag.label.replace_tag": "替换所选标签",
     "tag.title.original_tag": "Original Tag",
-    "tag.title.replace_with": "Replace With"
+    "tag.title.replace_with": "Replace with",
+    "tag.title.tag_management": "Tag Management",
+    "tag.title.tag_name": "Tag Name",
+    "tag.title.tagged_entities": "Tagged Entities"
 }
