--- a/packages/locales/src/lang/en/user.json
+++ b/packages/locales/src/lang/en/user.json
@@ -29,6 +29,9 @@
     "user.role.members_tab_title": "Members",
     "user.role.model_table_title": "Module",
     "user.role.page_table_title": "Page",
+    "user.role.permission_group_manage": "Device Group Management",
+    "user.role.permission_manage": "Manage",
+    "user.role.permission_view": "View",
     "user.role.resource_dashboard_tab_title": "Dashboard Permission",
     "user.role.resource_device_tab_title": "Device Permission",
     "user.role.resource_integration_tab_title": "Integration Permission",
@@ -38,8 +41,5 @@
     "user.role.single_device_remove_tip": "Are you sure you want to remove device: {0}?",
     "user.role.single_integration_remove_tip": "After removal, all devices under the integration and independent entities will no longer be accessible. Are you sure you want to remove integration: {0}?",
     "user.role.single_member_remove_tip": "Are you sure you want to remove member: {0}?",
-    "user.role.users_tab_name": "Users",
-    "user.role.permission_view": "View",
-    "user.role.permission_group_manage": "Device Group Manage",
-    "user.role.permission_manage": "Manage"
+    "user.role.users_tab_name": "Users"
 }
